feat: tối ưu docker image